--- a/index.css
+++ b/index.css
@@ -4,3 +4,14 @@ body {
     align-items: center;
     justify-content: center;
 }
+
+
+@media (max-width: 400px) {
+
+    .logo-image {
+        min-width: 400px;
+        max-height: 400px;
+        right: 30px;
+        position: relative;
+    }
+}
